# algo-trading

./: .env  Cargo.toml
admin-service/: Cargo.toml
admin-service/src/: main.rs
admin-service/src/config/: mod.rs
commons/: Cargo.toml
commons/src/: lib.rs
commons/src/cache/: mod.rs
execution-service/: Cargo.toml
market-data-service/: Cargo.toml
market-data-service/src/: main.rs
market-data-service/src/config/: mod.rs  primary_emulator.rs  primary_fix_dev.rs  primary_ws_dev.rs
market-data-service/src/stream/: byma_rofex_fix.rs  byma_rofex_ws.rs  dispatcher.rs  emulator.rs  market_subscription.rs  mod.rs  redis_stream.rs
report-service/: Cargo.toml
strategy-service/: Cargo.toml
