[package]
name = "market-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons" }
dotenv = "0.15"
redis = "0.25"
url = "2"
concurrent-queue = "2.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
